--- a/Kakaocon/App.xaml
+++ b/Kakaocon/App.xaml
@@ -5,7 +5,7 @@
              xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
              StartupUri="MainWindow.xaml">
 	<Application.Resources>
-		<SolidColorBrush x:Key="PrimaryBrush" Color="#a0c0d7" />
+		<SolidColorBrush x:Key="PrimaryBrush" Color="#5faf84" />
 		<Color x:Key="PrimaryColor">#a0c0d7</Color>
 		<Style TargetType="{x:Type Button}">
 			<Setter Property="BorderThickness" Value="0"/>
