--- a/Kakaocon/App.xaml
+++ b/Kakaocon/App.xaml
@@ -6,7 +6,7 @@
              StartupUri="MainWindow.xaml">
 	<Application.Resources>
 		<SolidColorBrush x:Key="PrimaryBrush" Color="#5faf84" />
-		<Color x:Key="PrimaryColor">#a0c0d7</Color>
+		<Color x:Key="PrimaryColor">#5faf84</Color>
 		<Style TargetType="{x:Type Button}">
 			<Setter Property="BorderThickness" Value="0"/>
 			<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
